# BappoRealmBot

./: README.md  advert.py  countdown_class.py  countdowns.txt  help_embed_reference.json  keep_alive.py  main.py  pyproject.toml  realm.py  requirements.txt
cogs/: cmd_checks.py  countdown.py  etc.py  general_cmds.py  kick_unverified.py  mod_cmds.py  playerlist.py  remove_warnings.py  say_cmds.py  utils.py
cogs/cmds/: general_cmds.py  mod_cmds.py  playerlist.py  say_cmds.py  slow_playerlist.py
cogs/events/: countdown.py  etc.py  kick_unverified.py  remove_warnings.py
cogs/owner/: cog_control.py
