[tool.poetry]
name = "bapporealmbot"
version = "0.1.0"
description = ""
authors = ["Sonic4999 <sonictbm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6"
discord = "^1.0"
flask = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
