[tool.poetry]
name = "repl_python3_beta_BappoRealmBot-1"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.6.2"
discord = "^1.0.1"
flask = "^1.1.2"
humanize = "^2.6.0"
xbox-webapi = {git="https://github.com/Sonic4999/xbox-webapi-python.git",branch="aiohttp"}
xbox = "^0.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
